Fixing users edit form, and input addons on IE7

--- a/app/assets/stylesheets/admin/base.scss
+++ b/app/assets/stylesheets/admin/base.scss
@@ -253,6 +253,12 @@ table .ellipsis {
     border-left: 1px solid $grey-light;
     z-index: 2;
 
+    .ie7 & {
+      top: 1px !important;
+      padding-top: 16px !important;
+      padding-bottom: 8px !important;
+    }
+
     .glyphicon {
       line-height: 1.3;
     }
