--- a/app/assets/stylesheets/admin/layout.scss
+++ b/app/assets/stylesheets/admin/layout.scss
@@ -64,6 +64,7 @@ body {
     display: block;
     margin-right: -15px;
     margin-left: -15px;
+    clear: both;
   }
 
   .lte-ie7 & {
